--- a/guides/getting-started/writing-your-first-test.mdx
+++ b/guides/getting-started/writing-your-first-test.mdx
@@ -1,192 +1,233 @@
 ---
-title: "Writing and Running Your First Test"
-description: "Step through the process of authoring your initial test case using GoogleTest, compiling the test, and running it to view results. This guide introduces key concepts such as the TEST macro, assertions, and basic test structures."
+title: "Writing Your First Test"
+description: "Step through the process of defining and running your initial unit tests with GoogleTest. This guide quickly brings users from codebase import to a passing (or failing) test, illustrating the test lifecycle and basic syntax."
 ---
 
-# Writing and Running Your First Test
+# Writing Your First Test
 
-Step through the process of authoring your initial test case using GoogleTest, compiling the test, and running it to view results. This guide introduces key concepts such as the `TEST` macro, assertions, and basic test structures.
+## Workflow Overview
 
----
-
-## 1. Workflow Overview
-
-### Task Description
-This guide takes you from writing your first simple test case in C++ using the GoogleTest framework, through compiling it with your build system, to running the test binary and interpreting the results.
+This guide walks you through the process of writing and executing your initial unit test using GoogleTest, including integration with GoogleMock for mocking if needed. By following these steps, you will gain familiarity with test structure, test macros, writing basic assertions, and running your tests.
 
 ### Prerequisites
-- GoogleTest must be properly installed or included in your project.
-- A working C++ compiler supporting at least C++17.
-- Basic familiarity with C++ programming.
-- A build system prepared to compile and link GoogleTest (e.g., CMake, Bazel).
+
+- GoogleTest and GoogleMock installed and configured correctly in your build environment.
+- Basic understanding of C++ syntax.
+- A project with source files where you want to add tests.
 
 ### Expected Outcome
-By following this guide, you will have:
-- Written a minimal test case using the `TEST` macro.
-- Compiled the test into an executable.
-- Executed the test binary and observed the test results.
+
+You will create a simple test case that compiles and runs, demonstrating how to verify code behavior with assertions. You will see test results on the console indicating success or failure.
 
 ### Time Estimate
-Approximately 20-30 minutes.
+
+Approximately 10-15 minutes to write, compile, and run a basic test.
 
 ### Difficulty Level
+
 Beginner
 
 ---
 
-## 2. Step-by-Step Instructions
+## Step-by-Step Instructions
 
-### Step 1: Include the GoogleTest Header
-Create a C++ source file and include the GoogleTest header:
+<Steps>
+<Step title="Include GoogleTest Headers">
+Add the following includes at the top of your test source file. These bring in GoogleTest and GoogleMock features you'll need:
 
 ```cpp
 #include <gtest/gtest.h>
+#include <gmock/gmock.h>  // Only if you intend to create mocks
 ```
 
-This header includes all core GoogleTest APIs, including macros like `TEST` and assertions.
+<Check>
+Including `<gtest/gtest.h>` is sufficient if you only want to write simple tests. Include `<gmock/gmock.h>` when you also want to use mocking.
+</Check>
+</Step>
 
-### Step 2: Write Your First Test Case
-Define a test using the `TEST` macro. The macro takes two parameters: a **test suite name** and a **test name**. Inside the test body, you write assertions to verify conditions.
+<Step title="Write a Test Fixture or Test Case">
+Create a test case using the `TEST` macro with the following structure:
 
 ```cpp
-TEST(SampleTest, BasicAssertions) {
-  // Expect equality
-  EXPECT_EQ(7 * 6, 42);
-
-  // Check boolean condition
-  EXPECT_TRUE(1 < 2);
+TEST(TestCaseName, TestName) {
+  // Your test code here
 }
 ```
 
-**Explanation:**
-- `SampleTest` is the test suite, grouping related tests.
-- `BasicAssertions` is the name of this specific test.
-- `EXPECT_EQ` checks if the two values are equal.
-- `EXPECT_TRUE` verifies the condition is true.
+Example:
 
-### Step 3: Compile the Test Program
-Using your preferred build system (e.g., a simple g++ command or CMake), compile this source into an executable that links GoogleTest libraries.
-
-For example, with `g++` (assuming GoogleTest installed and pkg-config available):
-
-```bash
-g++ -std=c++17 -pthread my_test.cc -lgtest_main -lgtest -o my_test
-```
-
-Or with CMake, define your test executable and link against GoogleTest accordingly.
-
-### Step 4: Run the Test Executable
-Execute the compiled binary:
-
-```bash
-./my_test
-```
-
-You should see output similar to:
-
-```
-[==========] Running 1 test from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 1 test from SampleTest
-[ RUN      ] SampleTest.BasicAssertions
-[       OK ] SampleTest.BasicAssertions (0 ms)
-[----------] 1 test from SampleTest ran. (0 ms total)
-[----------] Global test environment tear-down
-[==========] 1 test from 1 test suite ran. (0 ms total)
-[  PASSED  ] 1 test.
-```
-
-This confirms your test passed successfully.
-
-### Step 5: Interpret Test Outcomes
-- If your assertions hold true, GoogleTest reports tests as **PASSED**.
-- If an assertion fails, GoogleTest immediately prints the failure details, including the expected and actual values and the file and line number.
-
-Example failure message:
-
-```
-my_test.cc:10: Failure
-Expected equality of these values:
-  7 * 6
-    Which is: 41
-  42
-```
-
-This helps quickly locate and diagnose errors.
-
-### Step 6: Expand Your Tests
-Once comfortable, define more tests within new or existing test suites using the `TEST` or `TEST_F` macros for fixtures.
-
----
-
-## 3. Examples & Code Samples
-
-### Minimal Test Example
 ```cpp
-#include <gtest/gtest.h>
-
-TEST(SimpleMathTest, Addition) {
-  EXPECT_EQ(2 + 2, 4);
-}
-
-int main(int argc, char** argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
+TEST(PainterTest, CanDrawCircle) {
+  // Setup and exercise the code you want to test
+  // Perform assertions
+  EXPECT_TRUE(true);  // Dummy assertion
 }
 ```
-This example defines one test and runs it using GoogleTest’s main function.
 
-### Running From Command Line
-```bash
-./simple_math_test --gtest_filter=SimpleMathTest.*
+<Info>
+A TestCase groups related tests. Each TestName should be descriptive and unique within the TestCase.
+</Info>
+</Step>
+
+<Step title="Write Assertions">
+Inside your test, write assertions to check conditions. Common macros include:
+
+- `EXPECT_EQ(val1, val2)` checks equality but continues on failure.
+- `ASSERT_TRUE(condition)` checks a boolean condition but aborts the test on failure.
+- `EXPECT_NE(val1, val2)` checks inequality.
+
+Example:
+
+```cpp
+int result = Add(2, 3);
+EXPECT_EQ(result, 5);
 ```
-Runs all tests under `SimpleMathTest` suite.
-
-### Test Assertions
-GoogleTest provides rich assertions:
-- Equality: `EXPECT_EQ(val1, val2)`
-- Boolean: `EXPECT_TRUE(cond)`, `EXPECT_FALSE(cond)`
-- String: `EXPECT_STREQ(str1, str2)`
-- Floating-point approximate equality: `EXPECT_NEAR(val1, val2, abs_error)`
-
-Use assertions liberally to document test expectations clearly.
-
----
-
-## 4. Troubleshooting & Tips
-
-### Common Issues
-- **Linker errors:** Ensure you link the test executable with `-lgtest` and `-lpthread`.
-- **Header not found:** Confirm the include paths point to GoogleTest’s headers.
-- **No tests run:** Verify you call `RUN_ALL_TESTS()` in `main()` after `InitGoogleTest`.
-
-### Best Practices
-- Keep tests small and focused on one logical verification.
-- Name test suites and tests clearly to describe their purpose.
-- Use `EXPECT_` macros for non-fatal assertions so all test code runs.
-- Use `ASSERT_` macros when subsequent test code depends on the assertion.
-
-### Performance Considerations
-- Keep each test case fast; avoid dependencies on slow external resources.
-- Use mocks (GoogleMock) to isolate code under test.
-
-### Alternative Approaches
-- When testing complex classes, extend tests by using fixtures via `TEST_F`.
-- Explore parameterized tests once comfortable with basic tests.
-
----
-
-## 5. Next Steps & Related Content
-
-- Learn about [Test Fixtures with TEST_F](guides/getting-started/writing-your-first-test.md#test-fixtures) to set up common contexts.
-- Explore the [Mocking Basics](guides/core-workflows/mocking-basics.md) guide to start using mocks for isolation.
-- Read the [Test Discovery Workflow](guides/getting-started/test-discovery-workflow.md) to understand organizing and running tests.
-- Check the [GoogleTest Primer](primer.md) for fundamentals beyond first test.
-
----
 
 <Note>
-Remember: Always write tests before your production code to adopt Test-Driven Development practices effectively.
+Use `ASSERT_` macros if further test steps depend on the assertion succeeding.
 </Note>
+</Step>
+
+<Step title="Build and Run Your Test">
+Compile your test source alongside your code and the GoogleTest/GoogleMock libraries according to your build system.
+
+Run the resulting test executable from the command line or through your IDE.
+
+Example terminal command:
+
+```shell
+./my_tests --gtest_filter=PainterTest.*
+```
+
+You should see output indicating tests passed or failed.
+
+<Warning>
+Make sure to initialize GoogleTest in your main if you provide a custom main function. Commonly, `RUN_ALL_TESTS()` will be used after `testing::InitGoogleTest(&argc, argv);`.
+</Warning>
+</Step>
+
+<Step title="Add Mock Classes (Optional)">
+If your tests depend on interactions with other components, define mock classes using `MOCK_METHOD` macros.
+
+Example:
+
+```cpp
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+};
+```
+
+Then set expectations and behaviors in your tests:
+
+```cpp
+MockTurtle turtle;
+EXPECT_CALL(turtle, PenDown()).Times(1);
+EXPECT_CALL(turtle, Forward(100)).Times(1);
+```
+
+<Info>
+Refer to the [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for detailed mocking techniques and best practices.
+</Info>
+</Step>
+</Steps>
+
+---
+
+## Examples & Code Samples
+
+### Simple GoogleTest
+
+```cpp
+#include <gtest/gtest.h>
+
+// Function to be tested.
+int Add(int a, int b) {
+  return a + b;
+}
+
+TEST(MathTest, AddsTwoNumbers) {
+  int result = Add(2, 3);
+  EXPECT_EQ(result, 5);  // Test will pass
+  EXPECT_NE(result, 4);  // Test will pass
+}
+```
+
+### Using GoogleMock to Mock a Turtle Interface
+
+```cpp
+#include <gmock/gmock.h>
+
+class Turtle {
+ public:
+  virtual ~Turtle() {}
+  virtual void PenUp() = 0;
+  virtual void PenDown() = 0;
+  virtual void Forward(int distance) = 0;
+};
+
+class MockTurtle : public Turtle {
+ public:
+  MOCK_METHOD(void, PenUp, (), (override));
+  MOCK_METHOD(void, PenDown, (), (override));
+  MOCK_METHOD(void, Forward, (int distance), (override));
+};
+
+TEST(PainterTest, DrawsCircle) {
+  MockTurtle turtle;
+  EXPECT_CALL(turtle, PenDown()).Times(1);
+  EXPECT_CALL(turtle, Forward(100)).Times(1);
+
+  // Code under test would use turtle
+  turtle.PenDown();
+  turtle.Forward(100);
+}
+```
+
+---
+
+## Troubleshooting & Tips
+
+### Common Issues
+
+- **Test not running:** Check your build links properly to GoogleTest and GoogleMock, and your test is linked to the test runner main or uses `GTEST_MAIN`.
+- **Expectations not verified:** Mocks verify expectations upon destruction. If mocks are leaked or live beyond test scope, verification may not occur as expected.
+- **Ambiguous overloaded methods:** When mocking overloaded methods, use full signatures in `MOCK_METHOD` and specify the constness and qualifiers explicitly.
+- **Uninteresting calls warning:** Use `NiceMock<>` wrapper or set expectations with `Times(AnyNumber())` to suppress warnings.
+
+### Best Practices
+
+- Write one test case per logical behavior to keep tests maintainable.
+- Use clear descriptive names for test cases and tests.
+- Use `EXPECT_CALL` for setting expectations (behavior + call verification) and `ON_CALL` to specify default behavior without strict expectations.
+- Initialize GoogleTest properly before running tests.
+- Use sequences (`InSequence`) to enforce order when needed.
+
+### Performance Considerations
+
+Avoid overly complex mock setups; simplify by creating concise mock classes or use fakes if appropriate for faster compilation and clearer tests.
+
+---
+
+## Next Steps & Related Content
+
+### What’s Next
+
+- Explore [Mocking Basics with GoogleMock](https://google.github.io/googletest/guides/getting-started/mocking-basics.html) to deepen your understanding of mocking.
+- Learn about [Writing Effective Assertions](https://google.github.io/googletest/guides/writing-and-structuring-tests/effective-assertions.html) to improve test robustness.
+- Review [Building and Running Tests](https://google.github.io/googletest/getting-started/first-test-workflow/building-and-running-tests.html) to streamline your workflow.
+
+### Related Guides
+
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) for advanced mocking patterns.
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) for detailed API.
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) for comprehensive foundational knowledge.
+
+### Resources
+
+- [GoogleTest Official Documentation](https://google.github.io/googletest/)
+- [GoogleMock GitHub Repository](https://github.com/google/googletest)
+- [GoogleTest Sample Tests](https://github.com/google/googletest/tree/main/googletest/test)
 
 ---
