--- a/guides/getting-started/mocking-basics.mdx
+++ b/guides/getting-started/mocking-basics.mdx
@@ -1,237 +1,50 @@
 ---
-title: "Basic Mocking: Using GoogleMock"
-description: "Hands-on guide for introducing mocks into your tests, using GoogleMock's key features. Learn to create mock classes, set expectations, and verify interactions using core macros."
+title: "Mocking Basics with GoogleMock"
+description: "A hands-on walkthrough of creating mock classes, using EXPECT_CALL and ON_CALL, and writing effective mock-based tests. This page introduces the key concepts of mocking in C++ and common patterns for dependency isolation."
 ---
 
-# Basic Mocking: Using GoogleMock
+# Mocking Basics with GoogleMock
 
-Hands-on guide for introducing mocks into your tests, using GoogleMock's key features. Learn to create mock classes, set expectations, and verify interactions using core macros.
+A hands-on walkthrough of creating mock classes, using `EXPECT_CALL` and `ON_CALL`, and writing effective mock-based tests. This page introduces the key concepts of mocking in C++ and common patterns for dependency isolation.
 
 ---
 
-## 1. Introduction to Basic Mocking
+## 1. Introduction to Mocking with GoogleMock
 
-Mocking is a powerful technique for testing interactions between components by simulating parts of your system. This guide walks you through the essentials of creating mock classes, setting expectations on mock methods, and validating behavior with GoogleMock.
+GoogleMock (gMock) enables you to create mock classes easily and specify expectations on their methods to test interactions between components. This page guides you through the basics of defining mock classes using the `MOCK_METHOD` macro, setting up behavior using `ON_CALL`, and expressing expectations with `EXPECT_CALL`.
 
-You will learn how to:
+**Key Objective:** Learn how to isolate dependencies by mocking interfaces or classes to write robust, reliable unit tests in C++.
 
-- Define mock classes from your interfaces
-- Use `EXPECT_CALL` to specify expected calls and behaviors
-- Utilize `ON_CALL` for default mock behaviors
-- Leverage matchers and actions to control mock method invocation
+---
 
 ## 2. Prerequisites
 
-Before you start:
+- Familiarity with C++ class inheritance and virtual methods.
+- Basic understanding of unit testing and test doubles.
+- GoogleMock library installed and properly configured in your build environment.
 
-- Have GoogleMock integrated in your project (`#include <gmock/gmock.h>`).
-- Understand the interface you want to mock, which must have `virtual` methods.
-- Be familiar with basic C++ and test writing using GoogleTest.
-
-## 3. Expected Results
-
-After completing this guide, you will be able to:
-
-- Define mock classes using `MOCK_METHOD` macros.
-- Set expectations that define how and when mock methods should be called.
-- Control mock method return values and side effects.
-- Understand and correctly use GoogleMock core macros for effective test design.
-
-Estimated time: 15-30 minutes
-Difficulty: Beginner to Intermediate
+Refer to the [Installing and Setting Up GoogleTest & GoogleMock](../getting-started/installing-and-setting-up) guide for installation details.
 
 ---
 
-## 4. Step-by-Step Guide
+## 3. Creating Mock Classes
 
-### Step 1: Define Your Mock Class
+To create mocks, define a subclass of the interface or base class you want to mock. Use the `MOCK_METHOD` macro in the `public:` section to specify each virtual method you want to mock.
 
-Start with your original interface. For example:
-
+### Syntax
 ```cpp
-class Foo {
+class MockClass : public BaseClass {
  public:
-  virtual ~Foo();
-  virtual int GetSize() const = 0;
-  virtual string Describe(const char* name) = 0;
-  virtual string Describe(int type) = 0;
-  virtual bool Process(Bar elem, int count) = 0;
+  MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
 };
 ```
 
-Create a mock class inheriting from your interface. Use the `MOCK_METHOD` macro to define mocks of virtual functions. The macro format is:
+- `ReturnType`: The return type of the method.
+- `MethodName`: The method name.
+- `Args...`: Method argument list enclosed in parentheses.
+- `Qualifiers`: Optional list like `(const, override)`.
 
-```cpp
-MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
-```
-
-Example mock class:
-
-```cpp
-#include <gmock/gmock.h>
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(string, Describe, (const char* name), (override));
-  MOCK_METHOD(string, Describe, (int type), (override));
-  MOCK_METHOD(bool, Process, (Bar elem, int count), (override));
-};
-```
-
-**Tips:**
-- Always put `MOCK_METHOD` in a `public` section.
-- Use `(const, override)` for const methods.
-- Wrapping complex return or argument types in parentheses or using type aliases can avoid macro parsing issues.
-
----
-
-### Step 2: Create and Use Mock Objects
-
-In your test, create mock object instances and set behaviors/assertions.
-
-Basic workflow:
-
-1. Import necessary GoogleMock symbols:
-   ```cpp
-   using ::testing::Return;
-   ```
-2. Construct mock object:
-   ```cpp
-   MockFoo mock_foo;
-   ```
-3. Optionally set default actions (with `ON_CALL`):
-   ```cpp
-   ON_CALL(mock_foo, GetSize()).WillByDefault(Return(1));
-   ```
-4. Set expectations with `EXPECT_CALL`:
-   ```cpp
-   EXPECT_CALL(mock_foo, Describe(5))
-       .Times(3)
-       .WillRepeatedly(Return("Category 5"));
-   ```
-5. Exercise code that calls mocks:
-   ```cpp
-   EXPECT_EQ(MyProductionFunction(&mock_foo), "good");
-   ```
-6. GoogleMock validates expectations automatically on destruction.
-
----
-
-### Step 3: Configure Expectations
-
-Control when and how often mock methods are called:
-
-- **`EXPECT_CALL`** - sets expectations for **calls you want to verify**.
-- **`ON_CALL`** - sets **default behavior** without imposing call expectations.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, FooMethod(_)).Times(2).WillOnce(Return(true));
-ON_CALL(mock_foo, FooMethod(_)).WillByDefault(Return(false));
-```
-
-The above means you expect exactly 2 calls that return `true`, all others fall back to returning `false`.
-
-Note:
-- The later (newer) `EXPECT_CALL` statements override earlier ones.
-- If you omit `.Times()`, inferred cardinality depends on `WillOnce` and `WillRepeatedly` clauses.
-
----
-
-### Step 4: Using Matchers for Argument Control
-
-When specifying expectations, you can refine arguments using matchers:
-
-- `_` matches any argument.
-- Specific matchers like `Eq(value)`, `Ge(value)`, `NotNull()` specify predicates.
-
-Example:
-
-```cpp
-EXPECT_CALL(mock_foo, Process(_, 5));  // Second argument must be 5.
-EXPECT_CALL(mock_foo, Describe(_));   // Any argument.
-EXPECT_CALL(mock_foo, Describe(HasSubstr("test")));  // Argument contains substring.
-```
-
-Combining matchers helps write readable, flexible mocks:
-
-```cpp
-EXPECT_CALL(mock_foo, Process(Ge(0), _));  // First arg >= 0, second any.
-```
-
----
-
-### Step 5: Handling Call Order
-
-By default, expectations can occur in any order. Use sequences to enforce order:
-
-```cpp
-using ::testing::InSequence;
-{
-  InSequence s;
-  EXPECT_CALL(mock_foo, FirstCall());
-  EXPECT_CALL(mock_foo, SecondCall());
-}
-```
-
-This expects `FirstCall()` to happen before `SecondCall()`.
-
-For more complex partial orders, use `Sequence` objects and `.InSequence()` clauses.
-
----
-
-### Step 6: Mock Object Strictness
-
-GoogleMock provides wrappers for controlling the default behavior on uninteresting calls (calls without expectations):
-
-- **`NiceMock`**: ignores uninteresting calls warnings
-- **`NaggyMock`** (default behavior): warnings on uninteresting calls
-- **`StrictMock`**: treats uninteresting calls as errors
-
-Example:
-
-```cpp
-using ::testing::NiceMock;
-NiceMock<MockFoo> mock;
-EXPECT_CALL(mock, DoThis());
-// Calls to other methods will not warn.
-```
-
-Use these to tune the strictness and verbosity of your tests.
-
----
-
-### Step 7: Verifying and Resetting
-
-Mock objects automatically verify expectations on destruction. You can manually verify earlier:
-
-```cpp
-#include <gmock/gmock.h>
-using ::testing::Mock;
-
-Mock::VerifyAndClearExpectations(&mock_foo);
-```
-
-This returns `true` if all expectations are satisfied. Avoid setting new expectations after verification.
-
----
-
-## 5. Common Pitfalls & Tips
-
-- **Always mock virtual methods**: Non-virtual methods cannot be mocked through inheritance.
-- **Set expectations before exercising the mock**: `EXPECT_CALL` must be called prior to invoking the mock method.
-- **Beware of uninteresting calls**: Use `NiceMock` or explicit catch-all expectations to avoid noisy warnings.
-- **Overlapping expectations**: The last matching expectation takes precedence.
-- **Avoid mocking classes you don’t own**: Instead, create interfaces or adaptors.
-
----
-
-## 6. Example: Basic Mocking Using `MockTurtle`
-
-Imagine a simplified interface:
-
+### Examples
 ```cpp
 class Turtle {
  public:
@@ -251,87 +64,164 @@ class MockTurtle : public Turtle {
 };
 ```
 
-Use in test:
+### Important Notes
+- Always define mock methods in the `public:` section regardless of the original method's access level.
+- If method arguments or return types contain commas (e.g., templated types like `std::pair`), wrap the type in parentheses or create type aliases to avoid compile errors.
 
+---
+
+## 4. Setting Default Behavior with ON_CALL
+
+`ON_CALL` defines default behavior for mock method calls but does *not* set any call-count expectations.
+
+### Usage
+```cpp
+ON_CALL(mock_object, Method(matchers...))
+    .WillByDefault(action);
+```
+
+Defaults allow your mock to behave sensibly when a method is called without an explicit expectation.
+
+### Example
+```cpp
+MockTurtle turtle;
+ON_CALL(turtle, GetX()).WillByDefault(Return(42));
+```
+Calling `turtle.GetX()` now returns 42 by default.
+
+---
+
+## 5. Setting Expectations with EXPECT_CALL
+
+`EXPECT_CALL` both sets expectations on method calls (e.g., how often and with what arguments a mock method should be called) and can specify behavior.
+
+### General Syntax
+```cpp
+EXPECT_CALL(mock_object, Method(matchers...))
+    .Times(cardinality)
+    .WillOnce(action)
+    .WillRepeatedly(action);
+```
+
+- `Times(cardinality)`: How many times the method should be called.
+- `WillOnce(action)`: Behavior for a single call.
+- `WillRepeatedly(action)`: Behavior after all `WillOnce` actions are used.
+
+### Example
+```cpp
+EXPECT_CALL(turtle, Forward(100))
+    .Times(AtLeast(1))
+    .WillOnce(Return())  // void return
+    .WillRepeatedly(Return());
+```
+
+### Important Guidelines
+- Set expectations *before* exercising the code.
+- Use matchers (e.g., `_` for any argument) to be flexible.
+- If you do not specify `Times()`, GoogleMock infers it based on `WillOnce` and `WillRepeatedly` clauses:
+  - No Will clauses → Times(1)
+  - N WillOnce, no WillRepeatedly → Times(N)
+  - N WillOnce and WillRepeatedly → Times(AtLeast(N))
+- Use `.RetiresOnSaturation()` if you want expectations to become inactive after they are met.
+
+---
+
+## 6. Using Matchers
+
+Matchers specify argument conditions in `EXPECT_CALL` and `ON_CALL`.
+
+- Use `_` to match any argument.
+- Use built-in matchers like `Eq(value)`, `Ge(value)`, `NotNull()`, etc.
+
+### Example
+```cpp
+EXPECT_CALL(turtle, GoTo(50, _));  // Matches calls where x=50, y any value
+EXPECT_CALL(turtle, Forward(Ge(100)));  // Forward called with distance >= 100
+```
+
+---
+
+## 7. Nice, Naggy, and Strict Mocks
+
+Mock objects can be wrapped with modifiers to alter behavior on calls for which no `EXPECT_CALL` is set.
+
+- **NiceMock<T>**: Suppresses warnings on unexpected calls (default recommended for stable tests).
+- **NaggyMock<T>** (default behavior without wrapper): Warns about unexpected calls.
+- **StrictMock<T>**: Fails the test if unexpected calls occur.
+
+### Usage
+```cpp
+using ::testing::NiceMock;
+NiceMock<MockTurtle> nice_turtle;
+EXPECT_CALL(nice_turtle, PenDown());
+```
+
+---
+
+## 8. Writing Tests Using Mocks
+
+### Basic Test Flow
+1. Create mock object.
+2. Define default behaviors with `ON_CALL` (optional).
+3. Define expectations with `EXPECT_CALL`.
+4. Exercise code using the mock.
+5. Automatic verification of call expectations on mock destruction.
+
+### Example
 ```cpp
 #include <gmock/gmock.h>
-#include <gtest/gtest.h>
 
 using ::testing::AtLeast;
 using ::testing::Return;
 
 TEST(PainterTest, DrawsCircle) {
   MockTurtle turtle;
-
+  ON_CALL(turtle, GetX()).WillByDefault(Return(0));
   EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
   EXPECT_CALL(turtle, Forward(100));
-  EXPECT_CALL(turtle, GetX()).WillRepeatedly(Return(0));
 
   Painter painter(&turtle);
-  EXPECT_TRUE(painter.DrawCircle(0, 0, 10));
+  EXPECT_TRUE(painter.DrawCircle(0, 0, 100));
 }
 ```
 
-In this test:
-- The `PenDown()` method is expected to be called at least once.
-- The turtle is expected to move forward 100 units.
-- The `GetX()` method is stubbed to return 0 when called.
+---
+
+## 9. Best Practices and Tips
+
+- Prefer using interfaces (abstract base classes) to mock instead of concrete classes.
+- Use `ON_CALL` to define generic or default mock behavior and limit `EXPECT_CALL` to calls you want to verify.
+- Avoid over-specifying expectations to prevent brittle and hard-to-maintain tests.
+- Use `RetiresOnSaturation()` or `InSequence` to handle ordered call expectations.
+- Choose the appropriate strictness modifier (`NiceMock`, `NaggyMock`, or `StrictMock`) based on your testing scenario.
+- Wrap complex argument matching logic in custom matchers.
 
 ---
 
-## 7. Troubleshooting
+## 10. Troubleshooting Common Mocking Issues
 
-### Problem: Mock Method Calls Real Method
-- **Cause:** Method is not virtual.
-- **Solution:** Ensure the method is declared `virtual` in the interface.
-
-### Problem: Unexpected Call Failure
-- **Cause:** Mock method called more times than expected or with wrong arguments.
-- **Solution:** Adjust `EXPECT_CALL` or add appropriate catch-all expectations.
-
-### Problem: Uninteresting Call Warnings
-- **Cause:** Mock method called without matching `EXPECT_CALL`.
-- **Solution:** Use `NiceMock` or add an `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())`.
-
-### Problem: Overloaded Method Ambiguity
-- **Cause:** Overloaded methods confuse the compiler.
-- **Solution:** Use disambiguation techniques such as specifying matchers for argument types or the `Const()` wrapper.
-
-### Problem: Mock with Non-Default Constructor
-- **Note:** Use appropriate wrapper classes (`NiceMock`, `StrictMock`) with constructor arguments.
+- **MOCK_METHOD compilation errors with commas in types:** Wrap the type in parentheses or typedef it.
+- **Uninteresting call warnings:** Use `NiceMock` to suppress them if they are expected.
+- **Unexpected calls causing failures:** Define explicit expectations or catch-all expectations.
+- **Over-saturated calls:** Make sure call counts match expectations or use `.RetiresOnSaturation()`.
+- **Ambiguous method overloads:** Help the compiler by specifying matchers precisely or using `Const()` to disambiguate.
 
 ---
 
-## 8. Advanced Tips
+## 11. Additional Resources
 
-- For methods returning references, use `ReturnRef()` instead of `Return()`.
-- Use `.RetiresOnSaturation()` on expectations that should become inactive after being satisfied.
-- To test complex call ordering, use `Sequence` and the `.InSequence()` clause.
-- Use `SaveArg<N>(&variable)` in actions to capture arguments for later verification.
-- For move-only types (e.g., `std::unique_ptr`), use lambdas or functors in actions.
-
----
-
-## 9. Additional Resources
-
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html): Quick reference for macros and common patterns.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html): Beginner-friendly explanation with practical examples.
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html): Recipes for more complex use cases.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html): In-depth explanation of core mock API.
+- [GoogleTest Primer](../overview/introduction-core-value/what-is-googletest)
+- [gMock Cookbook](gmock_cook_book.md): Recipes and patterns for advanced mocking techniques.
+- [gMock Cheat Sheet](gmock_cheat_sheet.md): Quick reference for common gMock macros and usage.
+- [Mocking Reference](reference/mocking.md): Detailed API documentation.
+- [Installing and Setting Up GoogleTest & GoogleMock](../guides/getting-started/installing-and-setting-up)
 
 ---
 
-## 10. Summary
+For complex mocking patterns, consider exploring the Advanced Mocking Patterns page.
 
-This guide introduced you to the basics of mocking with GoogleMock:
-
-- Defining mock classes
-- Creating and using mock objects in tests
-- Setting expectations with `EXPECT_CALL`
-- Using matchers to control argument matching
-- Controlling mock strictness and handling uninteresting calls
-- Troubleshooting common problems
-
-Implement these principles to write effective, maintainable tests verifying object interactions.
-
----
+<Check>
+Always ensure your mock methods are defined `public:` no matter their base access level.
+Use `EXPECT_CALL` judiciously — verify only what matters to keep tests maintainable.
+Suppress uninteresting call warnings with `NiceMock` but avoid using `StrictMock` unless necessary.
+</Check>
